--- a/frontend/index.html
+++ b/frontend/index.html
@@ -144,7 +144,7 @@
       errorMsg.innerText = '';
 
       try {
-        const response = await fetch('http://localhost:8000/upload', {
+        const response = await fetch('https://python-resume-analyzer.onrender.com/upload', {
           method: 'POST',
           body: formData,
         });
@@ -171,3 +171,4 @@
   </script>
 </body>
 </html>
+
